[gd_scene load_steps=5 format=3 uid="uid://456pw5r4kp4r"]

[ext_resource type="Script" path="res://UI/leaderboard_ui.gd" id="1_31fp7"]
[ext_resource type="Theme" uid="uid://e0ko5wbqflma" path="res://themes/title_theme.tres" id="1_biuva"]
[ext_resource type="Theme" uid="uid://0mcaptcoklj2" path="res://themes/subtitle_theme.tres" id="2_n2nu4"]
[ext_resource type="Theme" uid="uid://d2vfdeuycvrrh" path="res://themes/container_theme.tres" id="4_xv1as"]

[node name="Leaderboard_UI" type="CanvasLayer"]
script = ExtResource("1_31fp7")

[node name="LeaderboardLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -213.0
offset_right = 213.0
offset_bottom = 78.0
grow_horizontal = 2
theme = ExtResource("1_biuva")
text = "Leaderboard
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.0
offset_top = 74.0
offset_right = 232.0
offset_bottom = 113.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="NameLabel" type="Label" parent="TitleContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme = ExtResource("2_n2nu4")
text = "Name
"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="TitleContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
theme = ExtResource("2_n2nu4")
text = "Score
"
horizontal_alignment = 1

[node name="ScoreContainer" type="ScrollContainer" parent="."]
offset_left = 10.0
offset_top = 114.0
offset_right = 478.0
offset_bottom = 564.0
theme = ExtResource("4_xv1as")
follow_focus = true
scroll_horizontal_custom_step = 40.0
scroll_vertical_custom_step = 40.0
horizontal_scroll_mode = 0

[node name="ScoreGridContainer" type="GridContainer" parent="ScoreContainer"]
custom_minimum_size = Vector2(460, 450)
layout_mode = 2
theme = ExtResource("4_xv1as")
columns = 2

[node name="NoScoreContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -246.0
offset_right = 240.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_xv1as")

[node name="NoScoreLabel" type="Label" parent="NoScoreContainer"]
layout_mode = 2
theme = ExtResource("2_n2nu4")
text = "No Scores
"

[node name="GridBackground" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 114.0
offset_right = 470.0
offset_bottom = 564.0
color = Color(0.717647, 0.717647, 0.717647, 0.313726)
metadata/_edit_group_ = true

[node name="GoBackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -140.0
offset_right = 70.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_n2nu4")
text = "Ok
"

[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
